# mainproject

./: .env.sh  .gitignore  1  CMakeLists.txt  Kconfig.toplevel  README.md  create_esp_project.sh  readme.txt  sdkconfig  sdkconfig.old  sdkconfig.sublime-workspace
.cache/clangd/index/: app_main.c.142C32BFB5DEB4FD.idx  app_main.c.294BCC7BB7859D2D.idx  app_main.h.7E7B84DD7E051161.idx  app_main.h.FCDB40D2097AA38B.idx  buzzer.c.66C5F84E7F31F8D2.idx  buzzer.c.B4FF0C2C10D8AF6B.idx  buzzer.h.B7B370407F892B4F.idx  buzzer.h.D83BF092F0312446.idx  cJSON.c.0B929E4985D63292.idx  cJSON.h.29A84C92A8D4029C.idx  comm.c.2B277176551A6E9A.idx  comm.c.9677D67BEFC9C24D.idx  comm.h.99D4BA455BCA9E1D.idx  comm.h.B753BB4561DF36DE.idx  comm_log.h.D36D2BD543DD87E6.idx  common.h.3756A2884605EA43.idx  data_manager.c.05423F6BC1E79BC5.idx  (+70 more)
components/: bash.sh
components/buzzer/: CMakeLists.txt  Kconfig  README.md  buzzer.c  buzzer.h
components/cjson/: CMakeLists.txt
components/comm/: CMakeLists.txt  Kconfig  comm.c  comm.h
components/data_manager/: CMakeLists.txt  Kconfig
components/debugs/: CMakeLists.txt  Kconfig  debugs.c  debugs.h
components/event_handler/: CMakeLists.txt
components/fall_logic/: CMakeLists.txt  Kconfig  README.md
components/json_wrapper/: CMakeLists.txt
components/led_indicator/: CMakeLists.txt  Kconfig  README.md  led_indicator.c  led_indicator.h
components/mpu6050/: CMakeLists.txt  mpu6050.c  mpu6050.h
components/mqtt_client/: CMakeLists.txt  Kconfig
components/sim4g_gps/: CMakeLists.txt  Kconfig  README.md  sim4g_at.c  sim4g_at.h  sim4g_gps.c  sim4g_gps.h
components/user_mqtt/: CMakeLists.txt  Kconfig
components/wifi_connect/: CMakeLists.txt  Kconfig  README.md  wifi_connect.c  wifi_connect.h
main/: CMakeLists.txt  Kconfig  app_main.c  app_main.h  event_handler.c  event_handler.h  main.c
(+35 files in other folders)
